Work Item #940 - Import Data - Importing data on top of an Excel table throws an error
- Added code in the ImportDataAtActiveExcelCell method to check if the data being imported does not overlap with an existing Excel table, since overwriting the data messes up with the Excel table if it is used in data analysis (pivot tables, etc).  Moved code that creates an Excel table for the imported data and that paints an Excel header row to the ExcelUtilities.cs. (source/Classes/MySqlDataTable.cs)
- Created the CreateExcelTable, IntersectsWithAnyExcelTable and SetHeaderStyle methods. (source/Classes/ExcelUtilities.cs)
- Added resource strings for the message displayed to users if the importing data will overwrite cells belonging to an Excel table. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -888,4 +888,13 @@ Do you want to exit Edit Mode on all Worksheets within the Workbook before savin
   <data name="AppendDataNotSuitableForColumnTypeWarning" xml:space="preserve">
     <value>Appending data is not suitable for the mapped target column's data type.</value>
   </data>
+  <data name="ImportOverExcelTableErrorDetail" xml:space="preserve">
+    <value>The importing data will overwrite cells belonging to an existing Excel table.</value>
+  </data>
+  <data name="ImportOverExcelTableErrorSubDetail" xml:space="preserve">
+    <value>Do you want to import the data in a new Worksheet?</value>
+  </data>
+  <data name="ImportOverExcelTableErrorTitle" xml:space="preserve">
+    <value>Cannot import data over existing Excel table</value>
+  </data>
 </root>
