Bug #17349260 - ERROR WHEN SELECTING THE WHOLE SPREADSHEET'S CELLS Bug #14362824 - SELECTING A HUGE AMOUNT OF CELLS IN EXCEL FREEZES EXCEL
- Reengineered code in the ContainsAnyData method which was checking all the values within Excel cells and stopped when finding any, which with huge selections was taking some time; instead using Excel's native formula to determine if the range contains any data. Did the same with the GetColumnsWithDataInfoList method to verify which Excel columns contain data and which don't.  Replaced all instances of the Range.Count property with Range.CountLarge because the Count property's Int32 type cannot hold a value for huge selections. Removed the ToBidimensionalArray method because a huge selection of Excel cells was failing to be converted to a bidimensional array of objects, the Range.Value and Range.Value2 properties throw an exception with a huge selection which makes them unusable. (source/Classes/ExcelUtilities.cs)
- Modified the strategy within the AddExcelData and DetectTypes methods of the MySqlDataTable class to avoid using a bidimensional array of objects to fill the MySqlDataTable and to detect the column data types and instead access directly the contents of the Excel range selected by the user, this is because with huge selections the Range.Value and Range.Value2 properties throw an exception, also this new method saves memory and processing. (source/Classes/MySqlDataTable.cs)
- Added the SkipSelectedDataContentsDetection property to the ThisAddIn class to skip the check for any values within an Excel range, this is because the add-in programatically does a selection of cells on Import and Edit operations where we can save save some unneeded processing. (source/ThisAddIn.cs, source/Classes/MySqlDataTable.cs, source/Forms/EditDataDialog.cs)
- Refactored a piece of code in the GetMySqlExportDataType to make it simpler. (source/Classes/DataTypeUtilities.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+1.2.1
+- Implemented a new strategy for checking if a selection of Excel cells contain values to enable/disable the Export Data to New Table action label, this new
+  strategy uses Excel native functions which are optimized for speed and memory usage. Optimized the way selected Excel data is fed to the Export Data's preview
+  grid so the Export Data dialog loads faster with huge selections of data.
+  (Bug #17349260 - ERROR WHEN SELECTING THE WHOLE SPREADSHEET'S CELLS)
+  (Bug #14362824 - SELECTING A HUGE AMOUNT OF CELLS IN EXCEL FREEZES EXCEL)
+
 1.2.0
 - Added visual warnings to the Append Data dialog for source Excel columns being mapped to target MySQL columns where the source data is not suitable for the
   mapped target column's data type, so the user can make corrections before the data is attempted to be appended on the server.
