--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,8 @@
   grid so the Export Data dialog loads faster with huge selections of data.
   (Bug #17349260 - ERROR WHEN SELECTING THE WHOLE SPREADSHEET'S CELLS)
   (Bug #14362824 - SELECTING A HUGE AMOUNT OF CELLS IN EXCEL FREEZES EXCEL)
+- Changed the way the MySQL for Excel objects panel is refreshed on Windows XP.
+  (Bug #16238484 - TABLE ICON IS CUTOFF ON THE TABLE LIST WHEN TABLE IS EXPORTED TO AN EMPTY SCHEMA)
 
 1.2.0
 - Added visual warnings to the Append Data dialog for source Excel columns being mapped to target MySQL columns where the source data is not suitable for the
