Bug #17577014 - EXPORTING HUGE TABLE (250,000 ROWS) NEVER FINISH (SERVER LOST THE CONNECTION )
- Added the AddLocalizedDateFormatStringsAsNames to add to the active Excel workbook names used to assemble a localized MySQL date format, this in order to let Excel format dates using a formula for a whole column instead of processing date values 1 by 1. Added the GetRowValuesAsLinearArray to retrieve in a single operation an array with values from an Excel row range to be loaded into a MySqlDataRow. Added the GetNonEmptyRange method to return an Excel range containing non empty cells, so less iterations are needed to process data. Added the GetNonEmptyRectangularAreaRange to obtain a rectangular sub-range from a source range leaving out empty cells outside the rectangular area. (source/Classes/ExcelUtilities.cs)
- Added the AffectsRowsOnServer method to check if a SqlStatementType enumeration corresponds to an operation that affects rows on the server. Added the GetLinearArray method to get a linear array from a bidimensional one since Excel returns the latter. (source/Classes/MiscUtilities.cs)
- Moved data type detection from the MySqlDataTable to the MySqlDataColumn class' DetectDatatype method. Moved some setting logic for an Auto Primary Key column from the MySqlDataTable to the MySqlDataColumn class. Added the RangeColumnIndex property to store the source Excel column range from where the data that populates the column comes from. (source/Classes/MySqlDataColumn.cs)
- Optimized the building of SQL queries for MySqlDataRow objects by having the parent MySqlDataTable object calculate the common pieces of the SQL queries so the child rows only calculate the part that changes on every row. (source/Classes/MySqlDataRow.cs, source/Classes/MySqlDataTable.cs)
- Added optimization options to the AppendAdvancedOptionsDialog and AdvancedExportOptionsDialog to disable indexes and lock tables for Append Data operations and to create indexes after data has been inserted for Expor

--- a/source/Forms/AppendAdvancedOptionsDialog.resx
+++ b/source/Forms/AppendAdvancedOptionsDialog.resx
@@ -117,6 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="FootnoteAreaPanel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="ContentAreaPanel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="DisableTableIndexesCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="HelpToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="DisableTableIndexesCheckBox.ToolTip" xml:space="preserve">
+    <value>When checked the foreign and unique indexes in the target MySQL table will be temporarily disabled.
+For big tables, this saves a lot of disk I/O.
+For MyISAM tables, this option disables the indexes and locks tha table for the duration of the data insertion.
+For InnoDB tables, this option just disables the indexes.
+WARNING: If there are unique indexes in the table then be certain that the data contains no duplicate entries.</value>
+  </data>
+  <metadata name="SqlQueriesLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="PreviewRowsQuantityNumericUpDown.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -156,7 +178,14 @@
   <metadata name="DoNotPerformAutoMapCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <data name="DoNotPerformAutoMapCheckBox.ToolTip" xml:space="preserve">
+    <value>When checked MySQL for Excel will attempt to match source columns to target columns automatically.
+First it will attempt to match source to target column names, if none match then it will attempt to match source and target columns by their data types.</value>
+  </data>
   <metadata name="MappingOptionsLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="CommandAreaPanel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="DialogAcceptButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
