--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.2.1
+- Changed functionality to always forcefully remove columns that contain no data. Empty columns will always be excluded now.
+  (Bug #18113057 - EXPORT DATA: UNHANDLED EXCEPTION WHEN SELECTING THE WHOLE SPREADSHEEET'S DATA).
+  (Bug #16501338 - EXPORT DATA - EMPTY COLUMNS ARE NOT ALWAYS FLAGGED AS EXCLUDED)
 - Fixed code in the MySqlDataTable, MySqlDataColumn and MySqlDataRow classes that makes INSERT SQL queries recalculate after a column is excluded.
   (Bug #18269602 - EXPORT DATA - EXCLUDING COLUMNS CAUSE THE EXPORT DATA TO FAIL)
 - Optimized INSERT statements which are now sent as single statements for each of the data rows. In average a 30-35% time improvement was achieved.
