Bug #18269654 - EXPORT DATA - ERROR ON CHANGING PRIMARY KEY OPTIONS
- Added MySqlDataTable properties to the SyncSchema method that are needed for SQL queries recreation. Created the ResetFirstRowIsHeaderValue method to reset properly the MySqlDataRow.IsHeadersRow value when rows are created or when the user changes the value of the "First Row Contains Column Names" checkbox in the Export and Append Data dialogs. Fixed the count within the InsertingOperations property depending on the state of the "First Row Contains Column Names" checkbox. (source/Classes/MySqlDataTable.cs)
- Changed the strategy of the CreateAutoPkTempRange method to always start the AutoPK values with 0 and adjust its value later when SQL queries are generated. Removed a TempRange constructor no longer needed. (source/Classes/TempRange.cs)
- Removed an unneeded line in the ExportButton_Click method that was setting the TableName property but it is already being set in the CloneSchema and SyncSchema methods above the deleted line. (source/Forms/ExportDataForm.cs)
- Optimized the use of the MySqlTable property by setting the casted value of it to the _mySqlTable field to avoid many casts inside long loops. (source/Classes/MySqlDataRow.cs)
- Simplified the body of the GetInsertingValueForColumnType method to reduce its nesting, also to throw an UnrecognizedBooleanValueException if a value not suitable for a boolean column is used. (source/Classes/DataTypeUtilities.cs)
- Created the UnrecognizedBooleanValueException class to use it when a value not recognied as suitable for a boolean column is assigned to it (something different than true, false, 1, 0, yes, no, ja, neiin). (source/Classes/Exceptions/UnrecognizedBooleanValueException.cs, source/MySQL.ForExcel.csproj, source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.2.1
+- Fixed code that was causing the AutoPK column not to appear sometimes in the CREATE and INSERT statements, fixed the total count of inserted rows for Export Data and
+  Append Data operations depending on the status of the "First Row Contains Column Names" checkbox. Fixed the starting value of the AutoPK column depending on the status
+  of the "First Row Contains Column Names" checkbox.
+  (Bug #18269654 - EXPORT DATA - ERROR ON CHANGING PRIMARY KEY OPTIONS)
 - Changed functionality to always forcefully remove columns that contain no data. Empty columns will always be excluded now.
   (Bug #18113057 - EXPORT DATA: UNHANDLED EXCEPTION WHEN SELECTING THE WHOLE SPREADSHEEET'S DATA).
   (Bug #16501338 - EXPORT DATA - EMPTY COLUMNS ARE NOT ALWAYS FLAGGED AS EXCLUDED)
