Bug #18354533 - MYSQL FOR EXCELL ADDIN 1.2.0 (STAND ALONE) IS NOT ABLE TO UPDATE AN OLD VERSION
- Fixed code in custom action DLL project to check for null values for title and description attributes after getting them, and to check if the Registry key for MySQL for Excel exists before attempting to add it. (ExcelCustomAction/CustomAction.cs, ExcelCustomAction/Exceptions.cs. ExcelCustomAction.CA.dll)
- Fixed custom actions that install and remove the Registry keys for MySQL for Excel since the condition was wrong and was attempting to add the keys on a product update (when the keys were already added on a first install). Now the keys are added just on a first install and removed when the product is fully uninstalled. (Installer/main.wxs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.2.1
+- Fixed a bug in the MSIs present since version 1.1.2 that was trying to add Registry keys for MySQL for Excel during a product upgrade when the registry keys were
+  already present and should not be added. The Registry keys are just added now when the product is installed for the first time.
+  (Bug #18354533 - MYSQL FOR EXCELL ADDIN 1.2.0 (STAND ALONE) IS NOT ABLE TO UPDATE AN OLD VERSION)
 - Fixed code that was causing the AutoPK column not to appear sometimes in the CREATE and INSERT statements, fixed the total count of inserted rows for Export Data and
   Append Data operations depending on the status of the "First Row Contains Column Names" checkbox. Fixed the starting value of the AutoPK column depending on the status
   of the "First Row Contains Column Names" checkbox.
