Bug #17577014 - EXPORTING HUGE TABLE (250,000 ROWS) NEVER FINISH (SERVER LOST THE CONNECTION )
- Added a new StatementResultType to know if a query execution was aborted because of a network disconnection. Added code to the Execute method to verify if a connection is open before executing the statement, also to extract the inner exception (if any) in case of an error to determine if the Connector/NET error refers to a network disconnection. (source/Classes/MySqlStatement.cs, source/Forms/MySqlScriptDialog.cs)
- Added resource strings to report a network disconnection error to users. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -903,4 +903,7 @@ Do you want to exit Edit Mode on all Worksheets within the Workbook before savin
   <data name="UnrecognizedBooleanValueError" xml:space="preserve">
     <value>Unrecognized value suitable for a bool column encountered.</value>
   </data>
+  <data name="StatementExecutionGenericError" xml:space="preserve">
+    <value>An unknown error ocurred when trying to apply changes against the connected MySQL server.</value>
+  </data>
 </root>
